# vgi-tlsfp

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  vgi-lint.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  preprocess-require.awk  run-integration.sh
crates/tlsfp-core/: Cargo.toml
crates/tlsfp-core/src/: grease.rs  ja3.rs  ja4.rs  lib.rs  parser.rs
crates/tlsfp-core/tests/: fingerprint.rs
crates/tlsfp-wasm/: Cargo.toml
crates/tlsfp-wasm/src/: lib.rs
crates/tlsfp-worker/: Cargo.toml
crates/tlsfp-worker/src/: arrow_io.rs  fixtures.rs  lib.rs  main.rs  meta.rs
crates/tlsfp-worker/src/scalar/: decode.rs  guard.rs  ja3.rs  ja3s.rs  ja4.rs  mod.rs  version.rs
test/sql/: fingerprints.test
wasm/: build.sh
