[workspace]
resolver = "2"
members = ["crates/tlsfp-core", "crates/tlsfp-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-tlsfp"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Pulls in vgi-rpc 0.8 and
# arrow 59 transitively; keep arrow/vgi-rpc here in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves.
vgi = "0"
vgi-rpc = { version = "0", default-features = false, features = ["macros", "http"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

tlsfp-core = { path = "crates/tlsfp-core" }

[profile.release]
opt-level = 2
# Strip symbols + debug info from the release binary. The worker has no need for
# in-binary backtraces in production; build a debug profile locally for symbols.
strip = true
