[workspace]
resolver = "2"
members = ["crates/tlsfp-core", "crates/tlsfp-worker", "crates/tlsfp-wasm"]
# tlsfp-wasm only makes sense for wasm32-unknown-emscripten (it is a staticlib
# whose ring ops are supplied by emcc's --js-library), so keep it out of the
# default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p tlsfp-wasm`.
default-members = ["crates/tlsfp-core", "crates/tlsfp-worker"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-tlsfp"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. 0.24 provides the wasm
# `vgi::wasm_worker!` macro used by tlsfp-wasm; requires rustc 1.97 (see
# rust-version above). Base (feature-less) so each target can opt in: the native
# build takes the SDK's real defaults (`sqlite` + `transport-http`), while the
# wasm build must NOT — tokio/mio/axum and bundled SQLite do not compile for
# wasm32, and the browser transport serves over a byte channel rather than HTTP.
# Features are additive, and the two are behind mutually-exclusive target cfgs.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

tlsfp-core = { path = "crates/tlsfp-core" }

[profile.release]
opt-level = 2
# Strip symbols + debug info from the release binary. The worker has no need for
# in-binary backtraces in production; build a debug profile locally for symbols.
strip = true
